# jetson-assistant

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.nano.yml  docker-compose.orin.yml  docker-compose.spark.yml  docker-compose.thor.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
configs/: README.md  desktop.yaml  dgx-personaplex.yaml  nano.yaml  orin-agx.yaml  orin.yaml  spark.yaml  thor-gpu.yaml  thor-personaplex.yaml  thor-sota.yaml  thor.yaml
docs/: api.md  assistant.md  backends.md  jetson.md
examples/: assistant_basic.py  assistant_custom_llm.py  assistant_interactive.py  assistant_lightweight.py  assistant_vision.py
jetson_assistant/: __init__.py  __main__.py  cli.py  config.py  hardware.py
jetson_assistant/assistant/: __init__.py  audio_io.py  builtin_tools.py  cameras.py  core.py  llm.py  multi_watch.py  remote_camera.py  tts_cache.py  vision.py
jetson_assistant/backends/: personaplex.py  tool_parser.py
jetson_assistant/benchmark/: __init__.py  metrics.py  report.py  runner.py
jetson_assistant/core/: __init__.py  engine.py  remote.py  streaming.py
jetson_assistant/rag/: __init__.py  chunker.py  loaders.py  pipeline.py  store.py
jetson_assistant/server/: __init__.py  app.py  routes_llm.py  routes_rag.py  routes_stt.py  routes_tts.py  websocket.py
jetson_assistant/stt/: __init__.py  nemotron.py  nemotron_fast.py  registry.py  sensevoice.py  vllm_whisper.py  whisper.py
jetson_assistant/tts/: __init__.py  base.py  kokoro.py  piper.py  qwen.py  registry.py
jetson_speech/: __init__.py  __main__.py  cli.py  config.py
jetson_speech/assistant/: __init__.py  aether_bridge.py  audio_io.py  builtin_tools.py  cameras.py  core.py  llm.py  multi_watch.py  remote_camera.py  tools.py  vision.py  wakeword.py
jetson_speech/benchmark/: __init__.py  report.py  runner.py
jetson_speech/core/: __init__.py  audio.py  engine.py  remote.py  streaming.py  text.py
jetson_speech/rag/: __init__.py  chunker.py  embeddings.py  pipeline.py  store.py
jetson_speech/server/: __init__.py  app.py  routes_llm.py  routes_rag.py  routes_stt.py  routes_tts.py  schemas.py  websocket.py
jetson_speech/stt/: __init__.py  base.py  nemotron.py  registry.py  sensevoice.py  vllm_whisper.py  whisper.py
jetson_speech/tts/: __init__.py  kokoro.py  piper.py  qwen.py  registry.py
scripts/: benchmark.py  benchmark_backends.py  benchmark_pipeline.py  benchmark_regression.sh  build_dota2_rag.py  docker-entrypoint.sh  install_backend.sh  install_jetson.sh  qwen-tts-standalone.sh  run-assistant.sh  run-server.sh  run-sota-demo.sh  smoke-test.sh  test_rag.py
tests/: __init__.py  test_assistant.py  test_benchmark.py  test_cameras.py  test_config.py  test_core.py  test_docker_compose.py  test_hardware.py  test_multi_watch.py  test_personaplex_backend.py  test_server.py  test_stt_backends.py  test_tool_parser.py  test_tts_backends.py  test_tts_cache.py
webui/: __init__.py  app.py
wheels/: README.md
